Output: Add preformatting to avoid loss of whitespace
Printing custom input and output within <pre> tag inside the cards to make sure that the extra spaces provided with error message or output does not get lost.

--- a/app/component/OutputText/style.css
+++ b/app/component/OutputText/style.css
@@ -30,4 +30,5 @@
 .border-text {
     border: #fff;
     background-color: #555;
+    color: #fff;
 }
